testdata/error/balance_zero_multi_commodities.ledger
; Example of Ledger with incorrect balance absolute zero

2024/01/20 * Initial
    Assets:Bank                              100,000 JPY
    Assets:Bank                                1,000 CHF
    Equity

2024/01/20 * Shop
    Assets:Bank                                          = 0
    ; this could be 100k JPY + 1k CHF, but it's prohibited.
    Expenses:Cash                            100,000 JPY
